--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>💑 Fondo Común de Sueños</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
 
+    <header>
+        <h1>Fondo Común de Sueños ❤️</h1>
+        <p>Ahorremos juntos para hacer realidad nuestras mejores ideas.</p>
+    </header>
+
+    <main class="container">
+        <section class="savings-container">
+            <div class="card my-savings">
+                <h2><i class="fas fa-user"></i> Mis Ahorros</h2>
+                <div class="current-balance">
+                    <span id="my-balance">$0.00</span> / <span id="my-balance-bs">0 Bs</span>
+                </div>
+                <form id="my-contribution-form">
+                    <input type="number" id="my-amount" placeholder="Monto ($)" required min="0.01">
+                    <input type="number" id="my-amount-bs" placeholder="Monto (Bs)" required min="1">
+                    <button type="submit">Añadir Aporte</button>
+                </form>
+            </div>
+
+            <div class="card her-savings">
+                <h2><i class="fas fa-heart"></i> Ahorros de Ella</h2>
+                <div class="current-balance">
+                    <span id="her-balance">$0.00</span> / <span id="her-balance-bs">0 Bs</span>
+                </div>
+                <form id="her-contribution-form">
+                    <input type="number" id="her-amount" placeholder="Monto ($)" required min="0.01">
+                    <input type="number" id="her-amount-bs" placeholder="Monto (Bs)" required min="1">
+                    <button type="submit">Añadir Aporte</button>
+                </form>
+            </div>
+        </section>
+
+        <section class="proposals-container card">
+            <h2><i class="fas fa-lightbulb"></i> Pizarra de Propuestas</h2>
+            
+            <form id="new-proposal-form">
+                <input type="text" id="proposal-name" placeholder="Nombre de la idea (Ej: Cena romántica)" required>
+                <input type="number" id="proposal-cost" placeholder="Costo Estimado ($)" required min="0.01">
+                <select id="proposal-proposer">
+                    <option value="Yo">Propuesto por Mí</option>
+                    <option value="Ella">Propuesto por Ella</option>
+                </select>
+                <button type="submit">Proponer Idea</button>
+            </form>
+
+            <div id="pending-proposals">
+                <h3>Ideas Pendientes:</h3>
+                </div>
+            
+            <div id="approved-proposals">
+                <h3>Ideas Aprobadas:</h3>
+                </div>
+        </section>
+    </main>
+
+    <script src="script.js"></script>
+</body>
+</html>
