--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💑 Fondo Común de Sueños</title>
+    <title>💑 Nuestros Ahorros</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
     <header>
-        <h1>Fondo Común de Sueños ❤️</h1>
+        <h1>Nuestros Ahorros 💜</h1>
         <p>Ahorremos juntos para hacer realidad nuestras mejores ideas.</p>
     </header>
 
@@ -19,10 +19,10 @@
             <div class="card my-savings">
                 <h2><i class="fas fa-user"></i> Mis Ahorros</h2>
                 <div class="current-balance">
-                    <span id="my-balance">$0.00</span> / <span id="my-balance-bs">0 Bs</span>
+                    <span id="my-balance-usd">$0.00</span> / <span id="my-balance-bs">0 Bs</span>
                 </div>
                 <form id="my-contribution-form">
-                    <input type="number" id="my-amount" placeholder="Monto ($)" required min="0.01">
+                    <input type="number" id="my-amount-usd" placeholder="Monto ($)" required min="0.01">
                     <input type="number" id="my-amount-bs" placeholder="Monto (Bs)" required min="1">
                     <button type="submit">Añadir Aporte</button>
                 </form>
@@ -31,10 +31,10 @@
             <div class="card her-savings">
                 <h2><i class="fas fa-heart"></i> Ahorros de Ella</h2>
                 <div class="current-balance">
-                    <span id="her-balance">$0.00</span> / <span id="her-balance-bs">0 Bs</span>
+                    <span id="her-balance-usd">$0.00</span> / <span id="her-balance-bs">0 Bs</span>
                 </div>
                 <form id="her-contribution-form">
-                    <input type="number" id="her-amount" placeholder="Monto ($)" required min="0.01">
+                    <input type="number" id="her-amount-usd" placeholder="Monto ($)" required min="0.01">
                     <input type="number" id="her-amount-bs" placeholder="Monto (Bs)" required min="1">
                     <button type="submit">Añadir Aporte</button>
                 </form>
@@ -54,12 +54,12 @@
                 <button type="submit">Proponer Idea</button>
             </form>
 
-            <div id="pending-proposals">
-                <h3>Ideas Pendientes:</h3>
+            <div id="pending-proposals" class="proposal-list">
+                <h3>Ideas Pendientes de Aprobación:</h3>
                 </div>
             
-            <div id="approved-proposals">
-                <h3>Ideas Aprobadas:</h3>
+            <div id="approved-proposals" class="proposal-list">
+                <h3>Ideas Aprobadas y Gastos:</h3>
                 </div>
         </section>
     </main>
