--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <span id="my-balance-usd">$0.00</span> / <span id="my-balance-bs">0 Bs</span>
                 </div>
                 <form id="my-contribution-form">
-                    <input type="number" id="my-amount-usd" placeholder="Monto ($)" required min="0.01" step="0.01">
-                    <input type="number" id="my-amount-bs" placeholder="Monto (Bs)" required min="1" step="1">
+                    <input type="number" id="my-amount-usd" placeholder="Monto ($)" min="0.01" step="0.01">
+                    <input type="number" id="my-amount-bs" placeholder="Monto (Bs)" min="1" step="1">
                     <button type="submit">Añadir Aporte</button>
                 </form>
             </div>
@@ -34,8 +34,8 @@
                     <span id="her-balance-usd">$0.00</span> / <span id="her-balance-bs">0 Bs</span>
                 </div>
                 <form id="her-contribution-form">
-                    <input type="number" id="her-amount-usd" placeholder="Monto ($)" required min="0.01" step="0.01">
-                    <input type="number" id="her-amount-bs" placeholder="Monto (Bs)" required min="1" step="1">
+                    <input type="number" id="her-amount-usd" placeholder="Monto ($)" min="0.01" step="0.01">
+                    <input type="number" id="her-amount-bs" placeholder="Monto (Bs)" min="1" step="1">
                     <button type="submit">Añadir Aporte</button>
                 </form>
             </div>
